# xtrade

./: AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  clippy.toml  config.toml  config.toml.example  rustfmt.toml
.cursor/rules/: backend.mdc  rust-pro.mdc
.github/workflows/: ci.yml
docs/: architecture.md  prd.md  refactoring_best_practices.md  user_guide.md
docs/agent/: PLAN.md  price_trend_kline_design.md  price_trend_kline_plan.md  sprint.md
src/: lib.rs  main.rs
src/binance/: demo.rs  mock.rs  mod.rs  rest.rs  types.rs  websocket.rs
src/cli/: mod.rs
src/config/: mod.rs
src/market_data/: daily_candle.rs  mod.rs  symbol_subscription.rs
src/metrics/: mod.rs
src/notify/: mod.rs
src/session/: action_channel.rs  alert_manager.rs  command_router.rs  mod.rs  session_manager.rs
src/ui/: cli.rs  mod.rs  tui.rs  ui_manager.rs
src/ui/tui/: input.rs  mod.rs
src/ui/tui/render/: alerts.rs  command_palette.rs  header.rs  layout.rs  logs.rs  metrics.rs  mod.rs  orderbook.rs  overview.rs  price_trend.rs
tests/: concurrent_subscription_test.rs  integration_test.rs  orderbook_update_tests.rs
